header alignment fixing

--- a/index-styles.css
+++ b/index-styles.css
@@ -16,15 +16,18 @@
 .top-header {
     grid-column: 1/-1;
     display: grid;
-    grid-template-columns: 1fr 4fr 2fr;
-    justify-items: center;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: left;
     align-items: center;
+    gap: 30px;
 }
 
 
 .logo {
     font-size: 30px;
     font-weight: 700;
+    grid-column: 1/3;
+    padding-left: 195px;
 }
 
 .logo::first-letter {
